# forenseq

modules/ai_suggestions/: README.md
modules/ai_suggestions/Source/: EQVisualizerBridge.cpp  EQVisualizerBridge.h  LightbulbToggleButton.cpp  LightbulbToggleButton.h  LoudnessWidthBridge.cpp  LoudnessWidthBridge.h  MixSuggestion.cpp  MixSuggestion.h  StemAnalysisBridge.cpp  StemAnalysisBridge.h  SuggestionAnalyzer.cpp  SuggestionAnalyzer.h  SuggestionDrawerComponent.cpp  SuggestionDrawerComponent.h  SuggestionEngine.cpp  SuggestionEngine.h  SuggestionItemComponent.cpp  SuggestionItemComponent.h  SuggestionListComponent.cpp  SuggestionListComponent.h  SuggestionManager.cpp  SuggestionManager.h  WaveformViewerBridge.cpp  WaveformViewerBridge.h
modules/eq_visualizer/: CMakeLists.txt  README.md
modules/eq_visualizer/Source/: EQVisualizerComponent.cpp  EQVisualizerComponent.h  EQVisualizerControls.cpp  EQVisualizerControls.h  EQVisualizerExtensions.cpp
modules/eq_visualizer/Source/Demo/: Main.cpp
modules/eq_visualizer/Source/Test/: TestMain.cpp
modules/loudness_width_comparison/: README.md
modules/loudness_width_comparison/Source/: ComparisonResult.cpp  ComparisonResult.h  LoudnessAnalyzer.cpp  LoudnessAnalyzer.h  LoudnessMeterComponent.cpp  LoudnessMeterComponent.h  LoudnessToEQBridge.cpp  LoudnessToEQBridge.h  LoudnessToStemBridge.cpp  LoudnessToStemBridge.h  LoudnessToWaveformBridge.cpp  LoudnessToWaveformBridge.h  LoudnessWidthAnalyzer.cpp  LoudnessWidthAnalyzer.h  LoudnessWidthComparisonComponent.cpp  LoudnessWidthComparisonComponent.h  MatchScoreComponent.cpp  MatchScoreComponent.h  StereoWidthAnalyzer.cpp  StereoWidthAnalyzer.h  StereoWidthMeterComponent.cpp  StereoWidthMeterComponent.h
modules/stem_analysis/: CMakeLists.txt  README.md
modules/stem_analysis/Source/: StemAnalysisComponent.cpp  StemAnalysisComponent.h  StemAnalyzer.cpp  StemAnalyzer.h  StemData.cpp  StemData.h  StemInfoComponent.cpp  StemInfoComponent.h  StemIsolator.cpp  StemIsolator.h  StemManager.cpp  StemManager.h  StemSelectorComponent.cpp  StemSelectorComponent.h  StemToEQBridge.cpp  StemToEQBridge.h  StemToWaveformBridge.cpp  StemToWaveformBridge.h
modules/waveform_viewer/: CMakeLists.txt  README.md
modules/waveform_viewer/Source/: ReferenceTrackLoader.cpp  ReferenceTrackLoader.h  TrackInfoComponent.cpp  TrackInfoComponent.h  TrackSwitcherComponent.cpp  TrackSwitcherComponent.h  WaveformDisplay.cpp  WaveformDisplay.h  WaveformViewerComponent.cpp  WaveformViewerComponent.h  WaveformViewerExtensions.cpp  WaveformViewerMainComponent.cpp  WaveformViewerMainComponent.h
modules/waveform_viewer/Source/Demo/: Main.cpp
plugin_build/main_plugin/: CMakeLists.txt
plugin_build/main_plugin/Source/: ForensEQMainComponent.cpp  ForensEQMainComponent.h  ForensEQTheme.cpp  ForensEQTheme.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
